--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "expo": "^52.0.37",
     "expo-font": "~13.0.4",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-native": "0.76.7",
+    "react-native-linear-gradient": "^2.8.3",
+    "expo-linear-gradient": "~14.0.2"
   },
   "devDependencies": {
     "@types/react": "~18.3.12",
